refact: listAllMovies feature: filter with genres